welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: ')' expected but 'return' found.
  if (( in1319Duo(a,b)) && (!in1319(a)|| (!in1319(b)) ) return true
                                                        ^